Change color again

--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ body {
 	height: 20%;
 	font-weight: 300;
 	font-size: 3vh;
-	color: white;
+	color: black;
 	border-radius: 1vh;
 	border: none;
 	box-shadow: 3px 5px rgba(196, 196, 196, 0.2);
