--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ body {
 	font-size: 3vh;
 	border-radius: 1vh;
 	border: none;
+	color: white;
 	box-shadow: 3px 5px rgba(196, 196, 196, 0.2);
 }
 
