--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	position: relative;
 }
 .container {
 	height: 100vh;
@@ -44,9 +45,13 @@ body {
 .return-button {
 	position: absolute;
 	left: 1vh;
-	top: 2vh;
+	top: 3vh;
+	border-radius: 100%;
 	height: 8vh;
 	width: 8vh;
+	background-color: rgba(255, 255, 255, 0.2);
+	box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+	z-index: 1;
 }
 .return-button button {
 	height: 100%;
@@ -198,7 +203,7 @@ body {
 	pointer-events: visible;
 }
 .hide {
-	display: none;
+	display: none !important;
 }
 
 .cleaning-week {
@@ -207,4 +212,28 @@ body {
 
 .relax-week {
 	background: linear-gradient(180deg, #e96443 0%, #000428 100%);
+}
+
+.current-cleaner {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	height: 15vh;
+	width: 80%;
+	text-align: center;
+	color: white;
+	background-color: rgba(255, 255, 255, 0.5);
+  	border-radius: 0px 0px 16px 16px;
+ 	box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+	z-index: 1000;
+}
+.current-cleaner h1 {
+	font-size: 3vh;
+}
+
+.current-cleaner h2 {
+	font-size: 2vh;
 }
